[workspace]
members = [
    "lib",
    "program/unit",
     "program/recursive",
    "script",
]
resolver = "2"


[workspace.dependencies]
sp1-zkvm = { version = "4.2.0" }
sp1-sdk = { version ="4.2.0"}
sp1-prover = {version ="4.2.0"}
sp1-stark = {version ="4.2.0" }
alloy-sol-types = "0.8"
bincode = "1.3.3"
hex = "0.4.3"
sha2 ="0.10.8"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }